<?xml version="1.0"?>
<package>
  <name>amcl6d_tools</name>
  <version>1.0.0</version>
  <description>
    This package provides tools needed for the amcl6d library.

    It adds the messages which are also used by the 
    Las Vegas Reconstruction Toolkit
    to assure compatibility and also the possibility to run the
    raytracer and other things as standalone packages.

    However, it needs the I/O tools of meshing.pg2013 to run the 
    mesh publisher.

    Also to visualize the meshes as meshes rather than point clouds
    you should use the rviz_mesh_plugin .
  </description>

  <maintainer email="shoeffner@uos.de">Sebastian Höffner</maintainer>
 
  <license>MIT</license>

  <!-- <url type="website">http://wiki.ros.org/amcl6d</url> -->
 
  <author email="shoeffner@uos.de">Sebastian Höffner</author>
  <author>Denis Meyer</author> 

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>lvr</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libboost_system</build_depend>
  <build_depend>libboost_thread</build_depend>
  <build_depend>meshing.pg2013</build_depend>
  <build_depend>eigen3</build_depend>
  <build_depend>eigen_conversions</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>lvr</run_depend>  
  <run_depend>roscpp</run_depend>
  <run_depend>libboost_system</run_depend>
  <run_depend>libboost_thread</run_depend>
  <run_depend>meshing.pg2013</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>rviz_mesh_plugin</run_depend>

</package>
