<?xml version="1.0"?>
<package>
  <name>cgal_raytracer</name>
  <version>1.0.0</version>
  <description>This package provides libraries for raytracing.</description>

  <maintainer email="shoeffner@uos.de">Sebastian Höffner</maintainer>
 
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/raytracer</url> -->
 
  <author email="twiemann@uos.de">Thomas Wiemann</author>
  <author email="shoeffner@uos.de">Sebastian Höffner</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>amcl6d_tools</build_depend>
  <build_depend>libcgal8</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>amcl6d_tools</run_depend>
  <run_depend>libcgal8</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

</package>
