<?xml version="1.0"?>
<package>
  <name>plypub</name>
  <version>0.1.0</version>
  <description>The plypub package publishes a ply-file as a point cloud to visualize it with rviz.</description>

  <maintainer email="shoeffner@uos.de">Sebastian Höffner</maintainer>

  <license>Public Domain</license>

  <!-- <url type="website">http://uni.sebastian-hoeffner.de/thesis/</url> -->
  
  <author email="shoeffner@uos.de">Sebastian Höffner</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
